--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,39 @@
 	<groupId>pf_test</groupId>
 	<artifactId>pf_test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+	
+	<build>
+	<finalName>store-app</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.pf.entry.ShoppingMainEntry</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+    </plugins>
+</build>
 
 	<dependencies>
 		<dependency>
